--- a/.config
+++ b/.config
@@ -737,6 +737,8 @@ CONFIG_NET_SCH_DRR=m
 # CONFIG_NET_SCH_MQPRIO is not set
 CONFIG_NET_SCH_CHOKE=m
 CONFIG_NET_SCH_QFQ=m
+CONFIG_NET_SCH_CODEL=m
+CONFIG_NET_SCH_FQ_CODEL=m
 CONFIG_NET_SCH_INGRESS=m
 # CONFIG_NET_SCH_PLUG is not set
 
@@ -1065,7 +1067,7 @@ CONFIG_MACVLAN=m
 # CONFIG_NET_POLL_CONTROLLER is not set
 # CONFIG_IMQ is not set
 CONFIG_TUN=m
-# CONFIG_VETH is not set
+CONFIG_VETH=m
 
 #
 # CAIF transport drivers
