--- a/.config
+++ b/.config
@@ -51,7 +51,7 @@ CONFIG_CAVIUM_OCTEON_SOC=y
 # CONFIG_NLM_XLP_BOARD is not set
 # CONFIG_MIPS_PARAVIRT is not set
 # CONFIG_ALCHEMY_GPIO_INDIRECT is not set
-# CONFIG_MAPPED_KERNEL is not set
+CONFIG_MAPPED_KERNEL=y
 # CONFIG_CAVIUM_OCTEON2 is not set
 # CONFIG_CAVIUM_CN63XXP1 is not set
 CONFIG_CAVIUM_OCTEON_CVMSEG_SIZE=2
@@ -62,12 +62,7 @@ CONFIG_CAVIUM_OCTEON_USER_IO_PER_PROCESS=y
 # CONFIG_CAVIUM_OCTEON_USER_MEM is not set
 CONFIG_CAVIUM_OCTEON_USER_MEM_PER_PROCESS=y
 # CONFIG_CAVIUM_OCTEON_USER_MEM_DISABLED is not set
-CONFIG_CAVIUM_OCTEON_LOCK_L2=y
-CONFIG_CAVIUM_OCTEON_LOCK_L2_TLB=y
-CONFIG_CAVIUM_OCTEON_LOCK_L2_EXCEPTION=y
-CONFIG_CAVIUM_OCTEON_LOCK_L2_LOW_LEVEL_INTERRUPT=y
-CONFIG_CAVIUM_OCTEON_LOCK_L2_INTERRUPT=y
-CONFIG_CAVIUM_OCTEON_LOCK_L2_MEMCPY=y
+# CONFIG_CAVIUM_OCTEON_LOCK_L2 is not set
 CONFIG_CAVIUM_RESERVE32=0
 # CONFIG_CAVIUM_OCTEON_RAPIDIO is not set
 # CONFIG_CAVIUM_OCTEON_ERROR_TREE is not set
@@ -129,6 +124,7 @@ CONFIG_PAGE_SIZE_4KB=y
 # CONFIG_PAGE_SIZE_32KB is not set
 # CONFIG_PAGE_SIZE_64KB is not set
 CONFIG_FORCE_MAX_ZONEORDER=14
+CONFIG_PHYS_LOAD_ADDRESS=0xffffffff81000000
 CONFIG_CPU_HAS_PREFETCH=y
 CONFIG_CPU_GENERIC_DUMP_TLB=y
 CONFIG_MIPS_MT_DISABLED=y
@@ -2012,10 +2008,15 @@ CONFIG_MAGIC_SYSRQ=y
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_DEBUG_KERNEL=y
 # CONFIG_DEBUG_SHIRQ is not set
-# CONFIG_LOCKUP_DETECTOR is not set
+CONFIG_LOCKUP_DETECTOR=y
+CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC=y
+CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC_VALUE=1
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
-# CONFIG_DETECT_HUNG_TASK is not set
+CONFIG_DETECT_HUNG_TASK=y
+CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
+CONFIG_BOOTPARAM_HUNG_TASK_PANIC=y
+CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=1
 # CONFIG_SCHED_DEBUG is not set
 # CONFIG_SCHEDSTATS is not set
 # CONFIG_TIMER_STATS is not set
@@ -2051,7 +2052,7 @@ CONFIG_HAVE_DEBUG_KMEMLEAK=y
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_RCU_TORTURE_TEST is not set
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
-# CONFIG_RCU_CPU_STALL_INFO is not set
+CONFIG_RCU_CPU_STALL_INFO=y
 # CONFIG_RCU_TRACE is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
